--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
             <div class="owl-carousel testimonials-carousel wow fadeInUp">
 
               <div class="testimonial-item">
-                <img src="img/leaders/RC_Moideen.jpg" class="testimonial-img" alt="">
+                <img src="img/leaders/RC_Moideen.JPG" class="testimonial-img" alt="">
                 <h3>R.C Moideen</h3>
                 <h4>EX-President ICS</h4>
                 <p>
@@ -684,7 +684,7 @@
               </div>
     
               <div class="testimonial-item">
-                <img src="img/leaders/VP_Basheer.jpg" class="testimonial-img" alt="">
+                <img src="img/leaders/VP_Basheer.JPG" class="testimonial-img" alt="">
                 <h3>V.P Basheer</h3>
                 <h4>EX-President ICS</h4>
                 <p>
@@ -835,7 +835,7 @@
           
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/leaders/VP_Basheer.jpg" class="img-fluid" alt="">
+              <img src="img/leaders/VP_Basheer.JPG" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>V.P Basheer</h4>
