--- a/index.html
+++ b/index.html
@@ -385,6 +385,9 @@
                              Ashraf<br> 
                              Dil Jawad<br> 
                              Rushda</p>
+            <div id="social-links">
+            	<a href="https://www.facebook.com/groups/659579984131651" class="facebook"><i class="fa fa-facebook"> Madrasa Facebook Link</i></a>
+            </div>
     
            </div>
            <div class="modal-footer">
@@ -736,7 +739,7 @@
     <section id="team">
       <div class="container">
         <div class="section-header">
-          <h3>Leaders & Exicutive Members</h3>
+          <h3>Leaders & Executive Members</h3>
           <p>The Leaders leading Islamic Cultural Society in the year 2019-22. </p>
         </div>
          
@@ -839,7 +842,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>V.P Basheer</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/basheer.vp.3511" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -854,7 +857,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Anees EK</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -869,7 +872,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Basith EK</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/basi.ek.56" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -884,7 +887,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Anwar UK</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -899,7 +902,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Abdulkareem C</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/abdulkareem.c.96" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -914,7 +917,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Iqbal UK</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/iqbal.koduvally.9" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -929,7 +932,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Ishaq PC</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/ishaq.pci" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -944,7 +947,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>K Latheef</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/basi.ek.56" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -959,7 +962,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Latheef VV</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -974,7 +977,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Majeed TN</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/abdulkareem.c.96" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -989,7 +992,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>MP Abdurahman</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/abdurahiman.mp.142" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -1005,7 +1008,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>NP Ahmedkunhi</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/ishaq.pci" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -1020,7 +1023,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Salih KPC</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/salih.kpc.3" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -1035,7 +1038,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Subair K</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -1050,7 +1053,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>VP Najeeb</h4>
-                  <span>Exicutive Member</span>
+                  <span>Executive Member</span>
                   <div class="social">
                     <a href="https://www.facebook.com/abdulkareem.c.96" target="blank"><i class="fa fa-facebook"></i></a>
                   </div>
@@ -1457,7 +1460,7 @@
             <div class="social-links">
               <a href="#" class="twitter"><i class="fa fa-whatsapp"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.instagram.com/icskoduvally" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
